added java options to prevent OOMEs